package flyweight;

/**
 * @author wangzx
 * @create 2021-09-7:33
 */
public class User {

    private String name;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
