package flyweight;

/**
 * @author wangzx
 * @create 2021-09-7:17
 */
public abstract class Website {
    public abstract void use(User user);
}
